[gd_scene load_steps=3 format=3 uid="uid://c3114afxkijh1"]

[ext_resource type="Script" uid="uid://b0qk1i3bwgjkb" path="res://source/screens/save_menu/scripts/save_menu.gd" id="1_wo1rc"]
[ext_resource type="Resource" uid="uid://bcehjxld0kkyr" path="res://source/screens/save_menu/resources/save_menu_config_data.tres" id="2_vr35s"]

[node name="SaveMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wo1rc")
save_menu_config_data = ExtResource("2_vr35s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "slot 0"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "slot 1"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "slot 3"
